Fixed some x-overflow

--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -117,6 +117,7 @@ section {
 .picture-full {
     margin-top: 0.5em;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     gap: 0.5em;
 }
